Added a website so uptime robot can be used with repl.it

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 git+https://github.com/dgilman/gspread_asyncio
 git+https://github.com/HuyaneMatsu/Hata
+fastapi
+uvicorn[standard]
 ruamel.yaml
 d20
